Update and rename Wanted_a_Dumfries_Dictionary_For_a_Glasgow_Man.html to Wanted_a_Dumfries_Dictionary_for_a_Glasgow_Man.html

--- a/Wanted_a_Dumfries_Dictionary_for_a_Glasgow_Man.html
+++ b/Wanted_a_Dumfries_Dictionary_for_a_Glasgow_Man.html
@@ -7,7 +7,7 @@
     <div id="#container">
         <main>
 
-            <h1>Wanted a Dumfries Dictionary For a Glasgow Man.</h1>
+            <h1>Wanted a Dumfries Dictionary for a Glasgow Man.</h1>
             <div class="wrap">
                 <div class="wrap lg">
                     <div class="l">They put me in a burble wi’ their tone,</div>
