--- a/Wanted_a_Dumfries_Dictionary_for_a_Glasgow_Man.html
+++ b/Wanted_a_Dumfries_Dictionary_for_a_Glasgow_Man.html
@@ -5,6 +5,7 @@
 
 <body>
     <div id="#container">
+        <nav><a href="./">A Country Schoolmaster: James Shaw (1899)</a></nav>
         <main>
 
             <h1>Wanted a Dumfries Dictionary for a Glasgow Man.</h1>
